node-main/deps/v8/test/message/fail/import-script.out
# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:6: SyntaxError: Cannot use import statement outside a module
import { test } from "mod";
^^^^^^
SyntaxError: Cannot use import statement outside a module